--- a/Backend/Gemfile
+++ b/Backend/Gemfile
@@ -10,6 +10,7 @@ group :development do
   gem 'rake', '~> 10.4'
   gem 'rubocop', '~> 0.31'
   gem 'pry', '~> 0.10'
+  gem 'shotgun', '~> 0.9'
 end
 
 group :production do
